<resources>
    <string name="app_name">Walking School Bus</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="test_username">cor@lava.ca</string>
    <string name="test_password">corearth</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to registering a new user and displaying user profile -->
    <string name="register_here">Register Here</string>
    <string name="fullname_title">Full Name:</string>
    <string name="username_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="email_title">Email:</string>
    <string name="username_input_hint">Username…</string>
    <string name="password_input_hint">Password…</string>
    <string name="password_confirm_title">Confirm Password:</string>
    <string name="create_new_account">Create account</string>
    <string name="useremail_title">user_email</string>
    <string name="useremailname">Email:</string>
    <string name="useremail_input_hint">Email…</string>
    <string name="register">Register new account</string>
    <string name="birthYear">Birth Year</string>
    <string name="birthMonth">Birth Month</string>
    <string name="userAddress">Address</string>
    <string name="userCellPhone">Cell phone number</string>
    <string name="userHomePhone">Home phone number</string>
    <string name="userSchoolGrade">Current school grade</string>
    <string name="userSchoolTeacher">Current school teacher</string>
    <string name="userEmergencyContactInfo">Emergency contact instructions</string>
    <string name="nextBtnText">Next</string>
    <string name="userInstruction">All of the information on this page is optional but it is highly recommended that you fill it out!
    If you do not wish to add any extra information then simply click Register which is at the bottom of the page. All information seen here
    can be edited at a later time as well.</string>
    <string name="passwordMismatch">The current passwords do not match!</string>
    <string name="missingFields">Please fill out all of the fields!</string>

    <string name="editInfo">Edit information</string>
    <string name="submitInfo">Submit changes</string>
    <string name="editMenu">Edit</string>
    <string name="backMenu">Back</string>
    <string name="mainMenu">Main Menu</string>

    <!-- Strings related to groups -->
    <string name="NearBy">NearBy</string>
    <string name="Group">Groups</string>
    <string name="Join">Join</string>
    <string name="Create">Create</string>
    <string name="AZ">Join</string>
    <string name="Category">Groups</string>
    <string name="Popular">Finding</string>
    <string name="viewGroups">View Groups</string>
    <string name="JoinTitle">Join</string>
    <string name="FindTitle">Finding</string>
    <string name="BACK">BACK</string>
    <string name="removeGroups">Remove/Leave</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="Start">Start: </string>
    <string name="End">End: </string>

    <!-- Strings related to main menu -->
    <string name="logout">Logout</string>
    <string name="mngGroups">Manage Groups</string>
    <string name="usrMonitors">User Monitor</string>
    <string name="profileBtnTitle">Profile</string>
    <string name="messageInboxBtn">Message Inbox</string>
    <string name="panicBtn">PANIC</string>

    <!-- Strings related to monitoring/being monitored -->
    <string name="usersWhoMonitorYou">Users who are monitoring you:</string>
    <string name="usersWhoYouMonitor">Users monitored:</string>
    <string name="userHint">I would like to add...</string>
    <string name="monitorUsrCheckbox">another user to monitor</string>
    <string name="monitorMeUsrCheckbox">another user to monitor me</string>
    <string name="emptyInputWarning">Please enter a valid email.</string>


    <string name="walking_group_project">Walking Group Project</string>

    <!-- Strings related to the user's inbox -->
    <string name="newMessage">New Message</string>
    <string name="messageHint">Enter your message here...</string>
    <string name="parentSend">Send message to parents of a selected user</string>
    <string name="groupSend">Send message to selected group</string>
    <string name="noTgl">No</string>
    <string name="yesTgl">Yes</string>
    <string name="noSendDestinationWarning">Please select the users to whom you would like to send this message to!</string>
    <string name="sendBtnText">Send Message</string>
    <string name="successfulMessageSend">Your message was successfully sent!</string>
    <string name="errorMessageSend">There was an error when sending your message. Please check your internet connection and resend your message.</string>
    <string name="emptyMessageWarning">Please enter a message.</string>
    <string name="noMessageTargetsSelectedWarning">Please select the people to whom you would like to send your message to.</string>
    <string name="permissionsMenuItemTitle">Permissions</string>
    <string name="notLeading">You are currently not the leader of any groups!</string>

    <!-- Panic message strings -->
    <string name="panicMsgTitle">PANIC MESSAGE</string>
    <string name="panicMsgInstructions">This emergency message will be sent to all of the people who monitor you as
    well as all leaders of the groups that you are in!</string>
    <string name="msgSend">SEND</string>
    <string name="panicCancel">Go Back</string>

    <!-- Permissions -->
    <string name="acpt">Accept</string>
    <string name="deny">Deny</string>
    <string name="acptStatus">*ACCEPTED*</string>
    <string name="pendingStatus">*PENDING*</string>
    <string name="denyStatus">*DENIED*</string>
    <string name="noPermissionType">There are no permissions of this type!</string>
    <string name="changeLeader">New Leader</string>
    <string name="submitChanges">Please click the Submit button to request permission from your monitors. Nothing will be updated until they all approve this new change.</string>

    <!-- User Monitor Activity -->
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="info">Info</string>
    <string name="cancel">Cancel</string>
    <string name="all_groups">All groups:</string>
    <string name="leader_of">Leader of:</string>
    <string name="member_of">Member of:</string>
    <string name="edit">Edit/Details</string>
    <string name="submit">Submit</string>
    <string name="change_group_name">Change Group Name?</string>
    <string name="editing_group">Editing Group</string>
    <string name="current_members_in_group">Current Members in Group:</string>
    <string name="tap_on_member_to_view_information">Tap on member to view information</string>
    <string name="viewing_current_group_members_of">Viewing Current Group Members of:</string>
    <string name="title_activity_monitor_map">Map</string>
    <string name="view_monitored_users">List Users</string>
    <string name="find_child">Find Child</string>
    <string name="is_monitored_by_detail"> is monitored by:</string>
    <string name="mapIntroText">To enable real-time monitoring for you/your parent(s), please click \'TRACK ON/OFF\'.</string>
    <string name="track_on_off">Track ON/OFF</string>


    <!-- Store related -->
    <string name="store">Store</string>
    <!-- User Levels -->
    <string name="level1">1</string>
    <string name="level2">5</string>
    <string name="level3">10</string>
    <string name="level4">15</string>
    <string name="level5">20</string>
    <string name="leaderboard">Leaderboard</string>
</resources>
