<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Base.Theme.AppCompat.Dialog.Alert">

    <Button
        android:id="@+id/panicMsgSendBtn"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:layout_marginEnd="108dp"
        android:layout_marginLeft="112dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:text="@string/sendBtnText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panicMsgInstructions"
        android:layout_marginRight="108dp" />

    <TextView
        android:id="@+id/panicMsgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/panicMsgTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/panicMsgInstructions"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="22dp"
        android:text="@string/panicMsgInstructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panicMsgTitle"
        android:layout_marginRight="29dp"
        android:layout_marginLeft="30dp" />

    <Button
        android:id="@+id/panicMsgCnclBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:text="@string/panicCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panicMsgInput" />

    <EditText
        android:id="@+id/panicMsgInput"
        android:layout_width="282dp"
        android:layout_height="148dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/messageHint"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panicMsgSendBtn" />
</android.support.constraint.ConstraintLayout>